--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,3 +67,30 @@ jobs:
      with:
        name: docker-scout-findings
        path: scout-report.sarif
+
+ dast_scan:
+    name: Run DUST scan
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Pull PyGoat Docker Image
+        run: docker pull pygoat/pygoat:latest
+
+      - name: Run PyGoat Container
+        run: docker run --rm -d -p 8000:8000 pygoat/pygoat:latest
+
+      - name: Run ZAP scanner
+        uses: zaproxy/action-baseline@v0.4.0
+        with:
+          target: 'http://localhost:8000'
+          rules_file_name: '.zap/rules.tsv'
+
+      - name: Print ZAP reports
+        run: cat zap.out.md    
+
+
+
+     
