--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,10 +82,10 @@ jobs:
          docker_version: '20.10.7'
 
       - name: Build Docker Image
-        run: docker build -f Dockerfile -t mytestapp . 
+        run: docker pull pygoat/pygoat:latest 
 
       - name: Run PyGoat container
-        run: docker run --rm -p 8000:8000 mytestapp:latest
+        run: docker run --rm -d -p 8000:8000 pygoat/pygoat:latest
 
       - name: Run ZAP scanner
         uses: zaproxy/action-baseline@v0.14.0
