--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,10 @@ jobs:
       - name: Run ZAP scanner
         uses: zaproxy/action-baseline@v0.14.0
         with:
-          target: 'http://localhost:8000/'
+          target: 'http://127.0.0.1:8000/'
+
+      - name: q
+        run: pwd && ls -la
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
